# DotBot

./: README.md  START_BUILD.bat  arcamd.jks  arcamod  build.gradle.kts  existing_offsets.txt  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  (+1 more)
app/src/main/cpp/: CMakeLists.txt  arcamod.cpp
app/src/main/cpp/ARCAMOD/: GlobalIncludes.h
app/src/main/cpp/ARCAMOD/CoreDefines/: CoreIncludes.h
app/src/main/cpp/ARCAMOD/CoreDefines/Config/: AppSettings.h  ConfigManager.h  ExpiryValidator.h
app/src/main/cpp/ARCAMOD/CoreDefines/Utils/: MemoryMapUtils.h
app/src/main/cpp/ARCAMOD/EngineHooks/: HookIncludes.h
app/src/main/cpp/ARCAMOD/EngineHooks/libanogs/: definitions.h  h_monitoring_hooks.h  h_monitoring_hooks_1.h  h_monitoring_hooks_10.h  h_monitoring_hooks_11.h  h_monitoring_hooks_12.h  h_monitoring_hooks_13.h  h_monitoring_hooks_14.h  h_monitoring_hooks_15.h  h_monitoring_hooks_16.h  h_monitoring_hooks_17.h  h_monitoring_hooks_18.h  h_monitoring_hooks_19.h  h_monitoring_hooks_2.h  h_monitoring_hooks_20.h  h_monitoring_hooks_21.h  h_monitoring_hooks_22.h  h_monitoring_hooks_23.h  h_monitoring_hooks_24.h  h_monitoring_hooks_25.h  h_monitoring_hooks_26.h  h_monitoring_hooks_27.h  h_monitoring_hooks_28.h  h_monitoring_hooks_29.h  h_monitoring_hooks_3.h  h_monitoring_hooks_30.h  h_monitoring_hooks_31.h  h_monitoring_hooks_32.h  h_monitoring_hooks_33.h  h_monitoring_hooks_34.h  h_monitoring_hooks_35.h  h_monitoring_hooks_36.h  h_monitoring_hooks_37.h  h_monitoring_hooks_38.h  h_monitoring_hooks_39.h  h_monitoring_hooks_4.h  h_monitoring_hooks_40.h  h_monitoring_hooks_41.h  h_monitoring_hooks_42.h  h_monitoring_hooks_43.h  (+23 more)
app/src/main/cpp/ARCAMOD/EngineHooks/libunity/: EmulatorHooks.h  h_GameEngine_SystemSetting__set_EnableVulkan.h  unity_offsets.h
app/src/main/cpp/ARCAMOD/GameFeatures/: Includes.h
app/src/main/cpp/ARCAMOD/GameFeatures/Misc/: Misc_Hooks.h
app/src/main/cpp/ARCAMOD/GameFeatures/Misc/Hooks/: FakeStatus.h  Jump.h  Parachute.h  SkiingBoost.h  SkyDiving.h  Slide.h  SmartFPS.h  Spectate.h  Speed.h  Swim.h  Tutorial.h  UltraFPSGraphicUnlock.h
app/src/main/cpp/ARCAMOD/GameFeatures/Wallhack/: Wallhack_Hooks.h
app/src/main/cpp/ARCAMOD/GameFeatures/Wallhack/Hooks/: WallhackBoostFPS.h  WallhackEspNameColorBR.h  WallhackEspNameColorMP.h  WallhackEspNameHealthBR.h  WallhackEspNameHealthMP.h  WallhackEspNameOldBR.h  WallhackEspScale.h  WallhackNormal.h  WallhackOutline.h
app/src/main/cpp/ARCAMOD/GameFeatures/Weapon/: Weapon_Hooks.h
app/src/main/cpp/ARCAMOD/GameFeatures/Weapon/Hooks/: Aim.h  Crosshair.h  HighDamage.h  InfiniteAmmo.h  Recoil.h  Reload.h  Scope.h  Spread.h  Switch.h
app/src/main/cpp/ARCAMOD/GameSDK/: GameSDKIncludes.h
app/src/main/cpp/ARCAMOD/GameSDK/Offsets/: GameOffsetDefinitions.h  GameRegistry.h  IL2CppOffsets.h
app/src/main/cpp/ARCAMOD/Includes/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/AES/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/AES/backends/: AES.h  base64.h  plusaes.hpp
app/src/main/cpp/ARCAMOD/Includes/BNM/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/BydzPanel/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/DebugMonitoring/: BypassCodeGenerator.h  BypassDevelopmentGuide.md  CrashAnalyzer.h  CrashDetector.h  DataAnalysisTest.h  DebugCommands.h  Includes.h  LibanogsDataAnalyzer.cpp  LibanogsDataAnalyzer.h  LibanogsFunctionTracer.h  LibanogsRuntimeMonitor.cpp  LibanogsRuntimeMonitor.h  QuickBypassAnalyzer.h  README_DataAnalysis.md  README_RuntimeMonitoring.md  RuntimeMonitorTest.h  ThreadMonitor.h
app/src/main/cpp/ARCAMOD/Includes/DobbyHook/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/ImGui/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/KittyMemory/: KittyInclude.hpp  KittyMemory.cpp  KittyMemory.hpp  MemoryPatch.cpp  MemoryPatch.hpp
app/src/main/cpp/ARCAMOD/Includes/Logger/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/LogoData/: LogoData.cpp  LogoData.h  XenoLogoData.cpp  XenoLogoData.h
app/src/main/cpp/ARCAMOD/Includes/Obfusheader/: Obfusheader.hpp
app/src/main/cpp/ARCAMOD/Includes/Oxorany/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/PerformanceOptimization/: FPSOptimizer.h  Includes.h  MemoryPool.h  MemoryStressProtection.h  README.md  SimpleOptimizer.h  ThreadPool.h
app/src/main/cpp/ARCAMOD/Includes/SOIL/: soil.c
app/src/main/cpp/ARCAMOD/Includes/STB/: stb_image.cpp  stb_image_write.h  stb_optimization.h
app/src/main/cpp/ARCAMOD/Includes/SystemInfo/: SystemInfo.cpp  SystemInfo.h
app/src/main/cpp/ARCAMOD/Includes/Tools/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/foxcheats/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/json/: Includes.h
app/src/main/cpp/ARCAMOD/Includes/xdl/: Includes.h
app/src/main/cpp/ARCAMOD/JavaBridge/: JavaBridge.cpp
app/src/main/cpp/ARCAMOD/Modules/: ModulesIncludes.h
app/src/main/cpp/ARCAMOD/Modules/ESP/: ESPDraw.h  ESPDrawHelpers.h  ESPVehicleConfig.h
app/src/main/cpp/ARCAMOD/RemapTools/: RemapTools.hpp
app/src/main/cpp/ARCAMOD/RenderSwap/: RendererIncludes.h
app/src/main/cpp/ARCAMOD/RenderSwap/Hooks/: EGLHook.h  LobbyBypassHook.h  LobbyDetection.h
app/src/main/cpp/ARCAMOD/RenderSwap/UI/: UICheckboxReset.h  UIDrawError.h  UIDrawExpired.h  UIDrawLoadingLobby.h  UIDrawLogin.h
app/src/main/cpp/ARCAMOD/RenderSwap/Validation/: KeyValidator.h
app/src/main/cpp/ARCAMOD/ScreenshotFeedback/: ScreenshotFeedback.h
app/src/main/cpp/ARCAMOD/UIMenu/: UIIncludes.h
app/src/main/cpp/ARCAMOD/UIMenu/Menu/: ESPPanel.h  FeedbackPanel.h  InfoPanel.h  MainMenuRenderer.h  MemoryPanel.h  MiscPanel.h  SettingsPanel.h  UpdateStatusPanel.h  WeaponsPanel.h  WelcomeMessagePanel.h
app/src/main/cpp/ARCAMOD/UnityIntegration/: UnityAPIInit.h
app/src/main/cpp/LIBANOGS/: Monitoring.h
(+47 files in other folders)
